--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: fishsummit@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   portfolio site for joey peak (fishsummit)
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://fishsummit.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username:  fishsummitTV
 github_username:  fishsummit
 
